# results-chain-ontology

./: .env  .gitignore  LICENSE  Makefile  README.md  catalog-v001.xml  index.html  merged_results_chain.ttl  ontology.jsonld  ontology.owl  publish.sh  pyproject.toml  widoco.conf
OOPSevaluation/: oopsEval.html
doc/sections/: description-en.html
docs/doc/: index-en.html  ontology.jsonld  ontology.owl
docs/doc/sections/: description-en.html
mappings/ce_to_cmp/: README.md  ce_to_cmp2_crosswalk.ttl  crosswalk_ce_cmp.py
mappings/envo_to_unbis/: README.md  envo_to_unbis_crosswalk.ttl
markdown/: abstract.md  introduction.md
ontologies/results_chain/: README.md  results_chain.ttl
ontologies/shapes/: results_chain_shapes.shacl.ttl
provenance/: provenance-en.html  provenance-en.ttl
scripts/: validate_graph.py
sections/: abstract-en.html  introduction-en.html  ns-en.html  overview-en.html
sources/LOD4Stats/: README.md  download_lod4stats.py  sdg-kos-goals-targets-indicators.ttl  sdg-kos-subject-mappings.ttl
sources/cmp/actions/: README.md  cmp_actions_2.0.ttl  parse_cmp_actions.py
sources/cmp/threats/: README.md  cmp_threats_4.0.ttl  parse_cmp_threats.py
sources/conservation_evidence/: README.md  ce_taxonomy.ttl  scrape_conservation_evidence.py
sources/documents/: document_metadata.ttl
sources/envo/: README.md  download_envo.py
sources/unbis/: README.md  download_unbis.py
